# aerial_tactile_servoing

./: .gitignore  .gitmodules  Dockerfile  README.md  dev_env.txt  frames_2025-12-02_09.47.29.gv  launch_docker.sh  requirements.txt
.devcontainer/: devcontainer.json
data/: omnidrone.xml  serial_log_no_unexpected_q3.txt
data/px4_logs/: 20250605_tactip1_px4.ulg  20250612_manual1_px4.ulg  20250612_waypoint1_px4.ulg  20250612_waypoint3_px4.ulg  20250612_waypoint4_px4.ulg  20250616_tactip1_px4.ulg  20250616_tactip2_px4.ulg  20250616_tactip3_px4.ulg  20250617_tactip1_px4.ulg  20250624_tactip4_px4.ulg  20250624_tactip5_px4.ulg  20250624_tactip6_px4.ulg  log_271_2025-5-19-15-48-08.ulg  log_283_2025-5-21-11-07-08.ulg  log_299_2025-5-22-14-55-38.ulg  log_302_2025-5-26-15-31-18.ulg  log_342_2025-6-5-17-51-00.ulg  log_345_2025-6-5-18-35-42.ulg  log_356_2025-6-11-10-10-42.ulg  log_382_2025-6-17-17-35-52.ulg  log_383_2025-6-17-17-41-54.ulg
data/serial_logs/: serial_log_analyzer.py  serial_log_unexpected_q3.txt
docker/: Dockerfile  Dockerfile-colcon-build  Dockerfile-no-build  Dockerfile-no-build-jazzy  bashrc  docker-compose-build.yaml  docker-compose-no-build-jazzy.yaml  docker-compose-no-build.yaml  docker-compose-pull.yaml  docker-compose-services.yaml  docker-compose.yaml  entrypoint-colcon-build.sh  entrypoint-no-build.sh  entrypoint.sh  launch_docker.sh
rosbags/: metadata.yaml  rosbag_analyzer.py  rosbags_0.db3
rosbags/20240624_armmalfunction1_ros2bag/: metadata.yaml
rosbags/20250605_tactip1_ros2bag/: metadata.yaml  output_options.yaml
src/: test.py
src/ats_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ats_bringup/config/: dxl_ros2.yaml  dxl_ros2_ats.yaml  dxl_ros2_single.yaml  dxl_ros2_twoarms.yaml  feetech_ros2.yaml
src/ats_bringup/configs/: feetech_ros2.yaml
src/ats_bringup/launch/: ats_mission.launch.py  ats_test_launch.launch.py  controller_ats_test.launch.py  dynamixel_launch.launch.py  esa_demo.launch.py  esa_demo_nomd.launch.py  example.launch.py  gz_sim_one_arm.launch.py  hover_cyberzoo.launch.py  hover_cyberzoo_py.launch.py  manipulator_ats_test.launch.py  pose_based_ats_controller.launch.py  sim_controller.launch.py  sim_gz_one_new.launch.py  tactip_only.launch.py  test_dual_arms.launch.py  test_servos.launch.py  test_tactip.launch.py  uam_control_test.launch.py  ymca.launch.py
src/ats_bringup/launch/old/: esa_demo.launch.py  pose_based_ats_controller.launch.py  sim_controller.launch.py  waypoint.launch.py
src/core/mission_director/: CMakeLists.txt  package.xml  setup.py
src/core/mission_director/include/mission_director/: md_ros_wrapper.hpp  mission_director.hpp  state.hpp  state_ats.hpp  state_disarmed.hpp  state_hover.hpp  state_land.hpp  state_takeoff.hpp
src/core/mission_director/mission_director/: ats_mission.py  uam_control_test.py  uam_md_test.py  uam_state_machine.py  ymca_mission_director.py
src/core/mission_director/mission_director/old_implementation/: dry_ats_mission_director_py.py  esa_demo_mission_director_py copy.py  sim_mission_director_py.py
src/core/mission_director/src/: md_ros_wrapper.cpp  mission_director.cpp  state.cpp  state_ats.cpp  state_disarmed.cpp  state_hover.cpp  state_land.cpp  state_takeoff.cpp
src/drivers/driver_feetech_servo/: CMakeLists.txt  package.xml
src/drivers/driver_feetech_servo/include/driver_feetech_servo/: driver_feetech_servo.hpp
src/drivers/driver_feetech_servo/src/: driver_feetech_servo.cpp
src/drivers/dynamixel/dxl_driver/: CMakeLists.txt  package.xml
src/drivers/dynamixel/dxl_driver/config/: dxl_ros2_ats.yaml  example_dxl_config.yaml
src/drivers/dynamixel/dxl_driver/include/: dxl_driver.hpp
src/drivers/dynamixel/dxl_driver/launch/: dxl_example_config.launch.py
src/drivers/dynamixel/dxl_driver/src/: dxl_driver.cpp
src/drivers/dynamixel/dxl_driver/srv/: SetHomePosition.srv  SetHomePositions.srv  SetMaxVelocity.srv  SetTorqueEnable.srv
src/drivers/fcu_interface/: CMakeLists.txt  package.xml
src/drivers/fcu_interface/include/fcu_interface/: fcu_interface.hpp
src/drivers/fcu_interface/src/: fcu_interface.cpp
src/drivers/px4_ros2_driver/: CMakeLists.txt  package.xml
src/drivers/px4_ros2_driver/include/px4_ros2_driver/: px4_ros2_driver.hpp
src/drivers/px4_ros2_driver/src/: px4_ros2_driver.cpp
src/drivers/tactip_ros2_driver/: package.xml  setup.cfg  setup.py
src/drivers/tactip_ros2_driver/launch/: tactip_bringup.launch.py
src/drivers/tactip_ros2_driver/resource/models/simple_cnn_A2_1/: best_model.pth  env_params.json  final_model.pth  learning_params.json  processed_image_params.json  train_val_loss_acc.pkl
src/drivers/tactip_ros2_driver/resource/models/simple_cnn_A3_2025/: best_model.pth  final_model.pth  model_label_params.json  processed_image_params.json  train_val_loss_acc.pkl
src/drivers/tactip_ros2_driver/resource/models/simple_cnn_b2_1/: best_model.pth  env_params.json  final_model.pth  learning_params.json  model_image_params.json  model_label_params.json  processed_image_params.json  train_val_loss_acc.pkl
src/drivers/tactip_ros2_driver/resource/models/simple_cnn_replica/: env_params.json  learning_params.json  model_label_params.json
src/drivers/tactip_ros2_driver/tactip_ros2_driver/: tactip.py  tactip_ros2_driver.py
src/drivers/tactip_ros2_driver/tactip_ros2_driver/dependencies/: image_transforms.py  label_encoder.py  labelled_model.py  parse_args.py
src/simulation/px4_uam_sim/: CMakeLists.txt  README.md  setup.cfg  setup.py  tmux-script.sh
src/simulation/px4_uam_sim/include/: mocap_forwarder.hpp
src/simulation/px4_uam_sim/launch/: gz_martijn.launch.py  gz_martijn_one_arm.launch.py
src/simulation/px4_uam_sim/px4_uam_sim/: sim_remapper.py
src/simulation/px4_uam_sim/src/: mocap_forwarder.cpp  uam_handler.cpp
src/simulation/px4_uam_sim/urdf/: martijn.xacro  martijn_one_arm.xacro
src/simulation/px4_uam_sim/urdf/meshes/: ElbowLink.stl  ForearmLink.stl  Servo.stl  ServoElbow.stl  ShoulderLink.stl  centered_prop_ccw.stl
src/simulation/px4_uam_sim/worlds/: test_world.sdf
urdf/: ats_drone.urdf
(+132 files in other folders)
