<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ats_bringup</name>
  <version>0.0.1</version>
  <description>Launch package for aerial tactile servoing project</description>
  <maintainer email="mbrummelhuis@gmail.com">Martijn Brummelhuis</maintainer>
  <license>GPL-3.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Packages called in launch files -->
  <exec_depend>mission_director</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
