<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>driver_feetech_servo</name>
  <version>0.0.1</version>
  <description>Servo interface driver ROS2 package for Aerial Tactile Servoing project</description>
  <maintainer email="mbrummelhuis@gmail.com">Martijn Brummelhuis</maintainer>
  <license>GPL-3.0-only</license>

  <depend>dynamixel_sdk</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
