<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tactip_ros2_driver</name>
  <version>0.0.1</version>
  <description>ROS2 interface package for TacTip optical tactile sensor</description>
  <maintainer email="mbrummelhuis@gmail.com">Martijn Brummelhuis</maintainer>
  <license>GPL-3.0-only</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
